<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Lie Detector</string>
    <string name="cancel">Cancel</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_lie">LIE</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_truth">TRUTH</string>
    <string name="default_web_client_id">312532035908-49cq8i1tv9huodopur9d6c9sv9b7u9un.apps.googleusercontent.com</string>
    <string name="do_you_want_to_exit">Do you want to exit app?</string>
    <string name="exit">Exit</string>
    <string name="firebase_database_url">https://liedetectortestprank.firebaseio.com</string>
    <string name="game_analyzing">Analyzing result…</string>
    <string name="game_result_got">OK, GOT IT</string>
    <string name="game_scan_abort">Scan canceled</string>
    <string name="game_scan_complete">Scanning completed.</string>
    <string name="game_scanning">Scanning…</string>
    <string name="game_start">Long Press the fingerprint.</string>
    <string name="gcm_defaultSenderId">312532035908</string>
    <string name="google_api_key">AIzaSyA1jHQJ_E8piRxvbT83aPSLsT5d18o5l98</string>
    <string name="google_app_id">1:312532035908:android:cc320a09d12cb699</string>
    <string name="google_crash_reporting_api_key">AIzaSyA1jHQJ_E8piRxvbT83aPSLsT5d18o5l98</string>
    <string name="google_storage_bucket">liedetectortestprank.appspot.com</string>
    <string name="guide_how">How to play</string>
    <string name="guide_next">Next</string>
    <string name="guide_word">Prank your friends. Let your friend press the fingerprint scanner and do the lie test. While fingerprint is scanning you can control the result by pressing the volume key. Volume up key is truth and volume down key is lie.</string>
    <string name="install">Install</string>
    <string name="main_play">PLAY</string>
    <string name="main_preset">PRESET</string>
    <string name="md_back_label">Back</string>
    <string name="md_cancel_label">Cancel</string>
    <string name="md_choose_label">Choose</string>
    <string name="md_custom_label">Custom</string>
    <string name="md_done_label">Done</string>
    <string name="md_error_label">Error</string>
    <string name="md_presets_label">Presets</string>
    <string name="md_storage_perm_error">Your app has not been granted the READ_EXTERNAL_STORAGE permission.</string>
    <string name="new_folder">New Folder</string>
    <string name="policy_click">Privacy Policy</string>
    <string name="policy_read">By using this application, you have read and agreed to %s.</string>
    <string name="policy_start">start</string>
    <string name="preset_start">START</string>
    <string name="preset_title">PRESET MODE</string>
    <string name="preset_word">Preset Mode allow you to preset the next 5 scanning results. Fool your friends or families now.</string>
    <string name="privacy">Privacy Policy</string>
    <string name="project_id">liedetectortestprank</string>
    <string name="rate_content">If you love this app, please give us a 5 stars rate on Google Play. Thanks so much!</string>
    <string name="rate_no">NO, THANKS</string>
    <string name="rate_title">DO YOU LOVE THIS APP?</string>
    <string name="rate_yes">5 Stars !</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
