<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/main_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <androidx.legacy.widget.Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="180.0" />
        <ImageView android:layout_width="274.0dip" android:layout_height="132.0dip" android:src="@drawable/main_logo" android:scaleType="fitCenter" android:contentDescription="@null" />
        <androidx.legacy.widget.Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="99.0" />
        <RelativeLayout android:id="@id/layoutPlay" android:layout_width="190.0dip" android:layout_height="51.0dip">
            <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/main_btn" android:scaleType="fitCenter" android:contentDescription="@null" />
            <TextView android:textSize="19.0sp" android:textColor="#FFFFFF" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_play" android:layout_centerInParent="true" android:fontFamily="@font/usuzi_0" />
        </RelativeLayout>
        <androidx.legacy.widget.Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="30.0" />
        <RelativeLayout android:id="@id/layoutPreset" android:layout_width="190.0dip" android:layout_height="51.0dip">
            <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/main_btn" android:scaleType="fitCenter" android:contentDescription="@null" />
            <TextView android:textSize="19.0sp" android:textColor="#FFFFFF" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_preset" android:layout_centerInParent="true" android:fontFamily="@font/usuzi_0" />
        </RelativeLayout>
        <TextView android:textSize="8.0sp" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@id/policy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/privacy" />
        <androidx.legacy.widget.Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="99.0" />
        <LinearLayout android:orientation="vertical" android:id="@id/banner" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/lyLoading" android:background="#5c000000" android:visibility="invisible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentStart="true">
        <com.github.ybq.android.spinkit.SpinKitView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" app:SpinKit_Color="#ff00904c" style="@style/SpinKitView.FadingCircle" xmlns:app="http://schemas.android.com/apk/res-auto" />
    </LinearLayout>
    <include android:id="@id/lyPolicy" android:visibility="gone" layout="@layout/layout_policy" />
</RelativeLayout>